--- a/index.html
+++ b/index.html
@@ -248,15 +248,11 @@ section.skills {
 		
 				<div id= "contact">
 					<span class= "contact-header">
-						<a href="https://maps.google.com/?q=Aix les Bains, , FR"><i title="ADDRESS" class="fa fa-map-marker left"></i>&nbsp; 52 route Saint Innocent, Aix les Bains, , FR</a>
+						<a href="https://maps.google.com/?q=Aix les Bains, , FR"><i title="ADDRESS" class="fa fa-map-marker left"></i>&nbsp;Aix les Bains, , FR</a>
 					</span>
 					<br/><br/>
 					<span class= "contact-header">
 						<a href= "mailto:ndreno@gmail.com" target= "_blank"><i title="EMAIL" class="fa fa-envelope left"></i>&nbsp;ndreno@gmail.com</a>
-					</span>
-					<br/><br/>
-					<span class= "contact-header">
-						<a href= "tel:+336 78 35 60 64" target= "_blank"><i title="PHONE" class="fa fa-phone-square left"></i>&nbsp;+336 78 35 60 64</a>
 					</span>
 					<br/><br/>
 				</div>
@@ -274,8 +270,8 @@ section.skills {
 			<section id= "work">
 				<h2><i class= "fa fa-suitcase left"></i> WORK EXPERIENCE</h2>
 					<div class= "job">
-						<h3>Architect, </h3>
-						<h4>2023-11 			<span class="endDate">
+						<h3>Architect, NumSpot</h3>
+						<h4>2023-Nov 			<span class="endDate">
 							- Present
 						</span>
 						</h4>
@@ -289,10 +285,10 @@ section.skills {
 						</ul>
 					</div>
 					<div class= "job">
-						<h3>Senior API Architect, </h3>
-						<h4>2022-09 
+						<h3>Senior API Architect, Back Market</h3>
+						<h4>2022-Sep 
 						<span class="endDate">
-							- 2023-11
+							- 2023-Nov
 						</span>
 			</h4>
 						<p>Shaped the API strategy, architecture, and community practices for a fast-growing e-commerce platform, driving API-first initiatives and modernising the technical ecosystem.</p>
@@ -306,9 +302,9 @@ section.skills {
 					</div>
 					<div class= "job">
 						<h3>Solutions Architect, The Warehouse Group</h3>
-						<h4>2021-05 
+						<h4>2021-May 
 						<span class="endDate">
-							- 2022-06
+							- 2022-Jun
 						</span>
 			</h4>
 						<p>Delivered scalable integration and streaming solutions, modernised API management, and drove DevOps initiatives for a leading retail group.</p>
@@ -321,9 +317,9 @@ section.skills {
 					</div>
 					<div class= "job">
 						<h3>Digital Solution Architect, University of Auckland</h3>
-						<h4>2018-10 
+						<h4>2018-Oct 
 						<span class="endDate">
-							- 2021-05
+							- 2021-May
 						</span>
 			</h4>
 						<p>Modernised digital platforms and integration solutions for New Zealand’s leading university, leveraging cloud-native technologies and advanced analytics.</p>
@@ -337,9 +333,9 @@ section.skills {
 					</div>
 					<div class= "job">
 						<h3>Digital Architect, ENGIE B2C</h3>
-						<h4>2016-03 
+						<h4>2016-Mar 
 						<span class="endDate">
-							- 2018-10
+							- 2018-Oct
 						</span>
 			</h4>
 						<p>Led the architecture of digital solutions for customer-facing platforms, driving cloud adoption and innovation for a major energy provider.</p>
@@ -352,9 +348,9 @@ section.skills {
 					</div>
 					<div class= "job">
 						<h3>Software Architect and Scrum Master, </h3>
-						<h4>2014-03 
+						<h4>2014-Mar 
 						<span class="endDate">
-							- 2016-03
+							- 2016-Mar
 						</span>
 			</h4>
 						<p>Architected and implemented the CPF platform for the French Ministry of Work, managing a technical team and modernising the legacy systems.</p>
@@ -368,9 +364,9 @@ section.skills {
 					</div>
 					<div class= "job">
 						<h3>Software Engineer, </h3>
-						<h4>2009-09 
+						<h4>2009-Sep 
 						<span class="endDate">
-							- 2014-03
+							- 2014-Mar
 						</span>
 			</h4>
 						<p>Developed and maintained applications for the biggest French public financial institution, focusing on SOA, performance optimisation, and UI development.</p>
@@ -384,9 +380,9 @@ section.skills {
 					</div>
 					<div class= "job">
 						<h3>Intern, </h3>
-						<h4>2008-04 
+						<h4>2008-Apr 
 						<span class="endDate">
-							- 2008-09
+							- 2008-Sep
 						</span>
 			</h4>
 						<p>Provided IT support and system maintenance for a startup specialising in restaurant table management.</p>
@@ -423,14 +419,11 @@ section.skills {
 			<section id="education">
 				<h2><i class="fa fa-graduation-cap left"></i> EDUCATION</h2>
 				<h3>Master&#x27;s Degree, Network Infrastructure and Software Engineering - ENSEIRB-MATMECA</h3>
-				<h4>  - Present  
-				</h4>
+				<h4></h4>
 			 	<h3>Bachelor&#x27;s Degree, Computer Sciences - Lycée Jules Ferry Versailles</h3>
-				<h4>  - Present  
-				</h4>
-			 	<h3>Technological Degree, Electronic and Industrial Software - Technological University</h3>
-				<h4>  - Present  
-				</h4>
+				<h4> </h4>
+			 	<h3>Technological Degree, Electronic and Industrial Software - Technological University Ville d&#x27;Avray</h3>
+				<h4></h4>
 			 
 			</section>
 			<section id="languages">
