--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ section.skills {
 		
 				<div id= "contact">
 					<span class= "contact-header">
-						<a href="https://maps.google.com/?q=Aix les Bains, , FR"><i title="ADDRESS" class="fa fa-map-marker left"></i>&nbsp;Aix les Bains, , FR</a>
+						<a href="https://maps.google.com/?q=Aix les Bains, France"><i title="ADDRESS" class="fa fa-map-marker left"></i>&nbsp;Aix les Bains, France</a>
 					</span>
 					<br/><br/>
 					<span class= "contact-header">
