somes formatting fixes

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ section.skills {
 		
 				<div id= "contact">
 					<span class= "contact-header">
-						<a href="https://maps.google.com/?q=Aix les Bains, France"><i title="ADDRESS" class="fa fa-map-marker left"></i>&nbsp;Aix les Bains, France</a>
+						<a href="https://maps.google.com/?q=Aix les Bains, Auvergne-Rhône-Alpes, FR"><i title="ADDRESS" class="fa fa-map-marker left"></i>&nbsp;  Aix les Bains, Auvergne-Rhône-Alpes, FR</a>
 					</span>
 					<br/><br/>
 					<span class= "contact-header">
@@ -347,7 +347,7 @@ section.skills {
 						</ul>
 					</div>
 					<div class= "job">
-						<h3>Software Architect and Scrum Master, </h3>
+						<h3>Software Architect and Scrum Master, Ministry of Work</h3>
 						<h4>2014-Mar 
 						<span class="endDate">
 							- 2016-Mar
@@ -363,7 +363,7 @@ section.skills {
 						</ul>
 					</div>
 					<div class= "job">
-						<h3>Software Engineer, </h3>
+						<h3>Software Engineer, Deposits and Consignments Fund</h3>
 						<h4>2009-Sep 
 						<span class="endDate">
 							- 2014-Mar
@@ -379,7 +379,7 @@ section.skills {
 						</ul>
 					</div>
 					<div class= "job">
-						<h3>Intern, </h3>
+						<h3>Intern, Restopolitan</h3>
 						<h4>2008-Apr 
 						<span class="endDate">
 							- 2008-Sep
@@ -419,20 +419,23 @@ section.skills {
 			<section id="education">
 				<h2><i class="fa fa-graduation-cap left"></i> EDUCATION</h2>
 				<h3>Master&#x27;s Degree, Network Infrastructure and Software Engineering - ENSEIRB-MATMECA</h3>
-				<h4></h4>
+				<h4>  
+				</h4>
 			 	<h3>Bachelor&#x27;s Degree, Computer Sciences - Lycée Jules Ferry Versailles</h3>
-				<h4> </h4>
+				<h4>  
+				</h4>
 			 	<h3>Technological Degree, Electronic and Industrial Software - Technological University Ville d&#x27;Avray</h3>
-				<h4></h4>
+				<h4>  
+				</h4>
 			 
 			</section>
 			<section id="languages">
 				<h2><i class="fa fa-language left"></i> LANGUAGES</h2>
 			
 				<h3>🇫🇷 French</h3>
-				<h4>Fluency: Native</h4>
+				<h4>Level: Native</h4>
 				<h3>🇬🇧 English</h3>
-				<h4>Fluency: Fluent</h4>
+				<h4>Level: Fluent</h4>
 			</section>
 			<section id="interests">
 				<h2><i class="fa fa-star left"></i> INTERESTS</h2>
