--- a/index.html
+++ b/index.html
@@ -316,6 +316,20 @@ section.skills {
 						</ul>
 					</div>
 					<div class= "job">
+						<h3>Head of Engineering, Qard</h3>
+						<h4>2021-Feb 			<span class="endDate">
+							- Present
+						</span>
+						</h4>
+						<p>Fostering collaboration, mentoring talent and shaping the future of digital finance through technology at Qard, a dynamic fintech company.</p>
+						<h4>HIGHLIGHTS</h4>
+						<ul class="highlights">
+							<li>Leading the engineering team to design and deliver innovative financial solutions.</li>
+							<li>Specialising in scalable API development and robust system architecture to power seamless, secure, and high-performance platforms.</li>
+							<li>Driving technical strategy, ensuring system integration, and enabling the delivery of cutting-edge financial products.</li>
+						</ul>
+					</div>
+					<div class= "job">
 						<h3>Digital Solution Architect, University of Auckland</h3>
 						<h4>2018-Oct 
 						<span class="endDate">
