--- a/index.html
+++ b/index.html
@@ -173,6 +173,28 @@ blockquote .name {
     font-family: &quot;Montserrat&quot;;
 }
 
+/* --- REFERENCES --- */
+/* Overrides the default blockquote style specifically for the references section */
+#references blockquote {
+    /* Text style to match standard paragraphs */
+    font-size: 1em;
+    font-style: normal;
+    color: #333333;
+
+    /* Layout &amp; Decoration */
+    border-left: 4px solid #eee; /* A more subtle left border */
+    margin: 0 0 1.5em 0;         /* Space below each reference, no other margins */
+    padding: 0.2em 0 0.2em 15px;   /* Minimal vertical padding, keeps left indent */
+}
+
+/* Style for the attribution line (name, company, source) - no change needed here */
+.reference-item .name {
+  font-size: 0.9em;    /* Makes the font slightly smaller than the main text */
+  font-style: italic;  /* Makes it stand out visually */
+  color: #444;        /* A slightly lighter color to de-emphasize it */
+}
+
+
 /* --- RESPONSIVE &amp; PRINT (Original) --- */
 .responsive-show {
     display: none;
@@ -273,7 +295,7 @@ blockquote .name {
 		
 				<div id= "contact">
 					<span class= "contact-header">
-						<a href="https://maps.google.com/?q=Aix les Bains, Auvergne-Rhône-Alpes, FR"><i title="ADDRESS" class="fa fa-map-marker left"></i>&nbsp;  Aix les Bains, Auvergne-Rhône-Alpes, FR</a>
+						<a href="https://maps.google.com/?q=Aix les Bains, Auvergne-Rhône-Alpes, France"><i title="ADDRESS" class="fa fa-map-marker left"></i>&nbsp;  Aix les Bains, Auvergne-Rhône-Alpes, France</a>
 					</span>
 					<br/><br/>
 					<span class= "contact-header">
@@ -561,6 +583,33 @@ blockquote .name {
 				 	<h3 class="skills">Wine Tasting and Gastronomy</h3>
 				 	<h3 class="skills">Music Festivals and Cinema</h3>
 				 
+			</section>
+			<section id="references">
+				<h2><i class="fa fa-thumbs-up left"></i> REFERENCES</h2>
+				<blockquote>
+					<p>"Nico slotted in well to our Solutions Architecture team and quickly made a difference. Nico is a talented, highly-skilled technologist who will add value to any work environment."</p>
+					<footer>— From Tim Chaffe, Chief IT &amp; Digital Architect, University of Auckland</footer>
+				</blockquote>
+				<blockquote>
+					<p>"I had the opportunity and the chance to work with Nicolas on the transformation and agility of the system and he very concretely helped me to translate our master plan into concrete projects (API / DATA / DevSecOps). He was also a true evangelist of agile development of applications with high business value. It is very valuable to work with a person like Nicolas who combines Soft Skills and Hard Skills with real pragmatism when it comes to execution."</p>
+					<footer>— From Ibrahima Ndiaye, Head of Architecture, ENGIE B2C</footer>
+				</blockquote>
+				<blockquote>
+					<p>"I worked with Nico for a year in challenging master data managment solutions. I was impressed by Nico ability to come up to speed quickly. He shaped and upskilled the integration team, managed them to deliver high quality and sustainable solution while being the early adaptor of new technology and processes. Nico is quality oriented professional, pragmatic in his thinking, hands-on manager, trusted and respected by senior stakeholders and the team members. I strongly recommend Nico for complex integration architecture."</p>
+					<footer>— From Tarek Ahmed, Project Manager, TWG</footer>
+				</blockquote>
+				<blockquote>
+					<p>"Nicolas led the Scrum development team that built the CPF. He was the driving force behind the implementation of Scrum and its values within the Agile team, which was a huge challenge in the context of Informatique CDC."</p>
+					<footer>— From Olivier Ledru, Agile Coach, Caisse Des Dépôts et Consignations</footer>
+				</blockquote>
+				<blockquote>
+					<p>"I was lucky to hire Nicolas Dreno in 2018 as a Digital Solutions Architect. Building a new team of architects from the ground up, I went far and wide for architects who are customer obsessed, outcome focussed and at the same time have deep interest in engineering and technology to solve all kinds of business challenges. And we had lots of them during that time. Nicolas fit the bill almost perfectly. Nicolas had this insatiable desire to learn and experiment, then use it to build internal capabilities by converting learnings into documented and agreed patterns for delivery teams and other Solution Architects to easily consume. I deeply shared his dislike for mixing buzzwords in discussions. Instead he stayed focussed on solving some of the most pressing challenges that he took on, like setting up integration platforms in AWS cloud, creating secure API ecosystem and Data hub, to name a few. Sorry to see you go, real loss for us here in Aotearoa!"</p>
+					<footer>— From Ratan Kumar, Head of Architecture, University of Auckland</footer>
+				</blockquote>
+				<blockquote>
+					<p>"Nicolas Dreno worked in my team from January 2012 to March 2016, when he resigned on very good terms from ICDC for family reasons. At the time, I was responsible for the Program Management team, overseeing major strategic projects. Highly knowledgeable about new technology practices, Nicolas generally positioned himself as a leader, sharing and explaining his ideas. Throughout his career at ICDC, Nicolas did not hesitate to seize opportunities to advance at all levels (functional, technical, methodological, interpersonal, etc.), even if this meant structural changes. The results were particularly visible in the CPF project for the Ministry of Labor, where he quickly established himself as a pillar of the team. Since then, he has not hesitated to promote innovative practices for the benefit of projects and, more broadly, the company. This was particularly the case for the development and implementation of B2B and trust solutions with external partners (web services, identity federation, France Connect, etc.). With a strong lean mindset and keen to work more efficiently, Nicolas had no trouble evolving in an agile environment, seeking continuous improvement to identify new methods and tools and introduce them to those around him. Nicolas left ICDC with significant architectural expertise, making him a technical expert on numerous topics. Since then, I have had several opportunities to discuss his career path and career plans with Nicolas. I recommend Nicolas for any IT design position as a technical and functional architect, without any doubt regarding his ability to adapt to any new context."</p>
+					<footer>— From Hélène Piquer, Department Manager, Ministry of Labor (ICDC)</footer>
+				</blockquote>
 			</section>
 		</div>
 	</body>
