updating skills section

--- a/index.html
+++ b/index.html
@@ -509,8 +509,9 @@ blockquote .name {
 			                <span class="keyword">Ansible</span>
 			                <span class="keyword">Jenkins</span>
 			                <span class="keyword">Git</span>
+			                <span class="keyword">Gitlab CI</span>
 			                <span class="keyword">CI/CD</span>
-			                <span class="keyword">Infrastructure as Code (IaaC)</span>
+			                <span class="keyword">Infrastructure as Code (Terraform)</span>
 			            </div>
 			        </div>
 			        <div class="skill-category">
@@ -531,12 +532,14 @@ blockquote .name {
 			            <h4>Programming &amp; Frameworks</h4>
 			            <div class="keywords-list">
 			                <span class="keyword">Java</span>
-			                <span class="keyword">Spring (Boot, Core, MVC, Security, Batch)</span>
+			                <span class="keyword">Golang</span>
 			                <span class="keyword">Node.js</span>
 			                <span class="keyword">JavaScript</span>
+			                <span class="keyword">Spring (Boot, Core, MVC, Security, Batch)</span>
 			                <span class="keyword">Python (basics)</span>
 			                <span class="keyword">Shell/Bash</span>
 			                <span class="keyword">JSON Schema</span>
+			                <span class="keyword">OpenApi Specification (OAS)</span>
 			            </div>
 			        </div>
 			        <div class="skill-category">
@@ -547,16 +550,17 @@ blockquote .name {
 			                <span class="keyword">SAML</span>
 			                <span class="keyword">LDAP</span>
 			                <span class="keyword">Open Policy Agent (OPA)</span>
-			                <span class="keyword">OpenAM</span>
-			                <span class="keyword">OpenDJ</span>
+			                <span class="keyword">OpenAM/OpenDJ</span>
+			                <span class="keyword">LDAP</span>
 			            </div>
 			        </div>
 			        <div class="skill-category">
 			            <h4>Databases</h4>
 			            <div class="keywords-list">
-			                <span class="keyword">SQL (MySQL, PostgreSQL, Oracle)</span>
+			                <span class="keyword">SQL (MySQL, PostgreSQL, MariaDB, Oracle)</span>
 			                <span class="keyword">NoSQL (MongoDB, DynamoDB, Elasticsearch)</span>
-			                <span class="keyword">NewSQL (CockroachDB)</span>
+			                <span class="keyword">NewSQL (CockroachDB, ArangoDB)</span>
+			                <span class="keyword">Grap (MemGraph)</span>
 			            </div>
 			        </div>
 			        <div class="skill-category">
