deploy: 766b8eb97d12013ca050d4c525c3579922f6dfc7

--- a/fr.html
+++ b/fr.html
@@ -237,6 +237,9 @@ blockquote .name {
     /* This rule hides the download button */
     .download-btn { display: none !important; }
 
+    /* This rule hides the language switcher */
+    .language-switcher { display: none !important; }
+
     /* It makes the company logos smaller only for printing */
     .company-logo {
         max-width: 60px !important;
@@ -323,6 +326,11 @@ ul.technologies li {
 	</head>
 	<body>
 				<header>
+				<div class="language-switcher">
+		            <a href="en.html" title="View in English">English</a> |
+		            <a href="fr.html" title="Voir en Français">Français</a>
+		        </div>
+		
 				<h1>Nicolas Dréno</h1>
 				<h3 class= "label">Architecte Solutions</h3>
 		
