deploy: 8fc6495ccfaf96e5418c7b60f99c3af31d0158ea

--- a/en.html
+++ b/en.html
@@ -375,7 +375,8 @@ ul.technologies li {
 			
 						<h4>HIGHLIGHTS</h4>
 						<ul class="highlights">
-							<li>Enhancing cloud-native services, PaaS offerings, and API management solutions.</li>
+							<li>Definition of a modular and secure target architecture for cloud-native services and PaaS offerings (writing ADRs/HLDs/LLDs).</li>
+							<li>Design and implementation of sustainable and scalable architectures for API management and standardization.</li>
 							<li>Streamlining infrastructure and improving service reliability through collaboration with cross-functional teams.</li>
 							<li>Driving adoption of scalable, secure, and open-source technologies aligned with industry best practices.</li>
 							<li>Contributing to conformity requirements like SecNumCloud qualification.</li>
