--- a/fr.html
+++ b/fr.html
@@ -375,7 +375,7 @@ ul.technologies li {
 			
 						<h4>HIGHLIGHTS</h4>
 						<ul class="highlights">
-							<li>Définition d&#x27;une architecture cible modulaire et sécurisée pour des services cloud natifs et des offres PaaS (rédaction HLD/LLDs).</li>
+							<li>Définition d&#x27;une architecture cible modulaire et sécurisée pour des services cloud natifs et des offres PaaS (rédaction ADR/HLD/LLDs).</li>
 							<li>Conception et mise en œuvre d&#x27;architectures pérennes et évolutives pour la gestion et la standardisation des API.</li>
 							<li>Accompagnement des équipes dans l&#x27;application des bonnes pratiques d&#x27;architecture, de sécurité et d&#x27;automatisation.</li>
 							<li>Animation d&#x27;un cadre de gouvernance technique et définition des socles communs au sein du SI.</li>
