deploy: 6bd9fac3cffd50a8f16096b66ba89572fb1ecda2

--- a/fr.html
+++ b/fr.html
@@ -687,21 +687,21 @@ ul.technologies li {
 			<section id="education">
 			    <h2><i class="fa fa-graduation-cap left"></i> EDUCATION</h2>
 			    <div class="education-item">
-			        <h3>Diplôme d&#x27;Ingénieur, Infrastructures Réseaux et Génie Logiciel</h3>
+			        <h3>Diplôme d&#x27;Ingénieur, Réseaux &amp; Système d&#x27;information</h3>
 			        <h4>ENSEIRB-MATMECA</h4>
 			        <div class="meta">
 			            <span></span>
 			        </div>
 			    </div>
 			    <div class="education-item">
-			        <h3>Baccalauréat, Sciences Informatiques</h3>
+			        <h3>Brevet de Technicien Supérieur, Informatique et Réseaux pour l&#x27;Industrie et les Services techniques</h3>
 			        <h4>Lycée Jules Ferry Versailles</h4>
 			        <div class="meta">
 			            <span></span>
 			        </div>
 			    </div>
 			    <div class="education-item">
-			        <h3>DUT, Électronique et Informatique Industrielle</h3>
+			        <h3>DUT, Génie Électronique et Informatique Industrielle</h3>
 			        <h4>IUT de Ville d&#x27;Avray</h4>
 			        <div class="meta">
 			            <span></span>
@@ -718,7 +718,7 @@ ul.technologies li {
 			</section>
 			<section id="interests">
 				<h2><i class="fa fa-star left"></i> INTERESTS</h2>
-				<h3 class="skills">Bricolage, fabrication et brassage maison</h3>
+				<h3 class="skills">Bricolage, brassage maison</h3>
 				 	<h3 class="skills">Squash et tennis de table</h3>
 				 	<h3 class="skills">Randonnée et trekking</h3>
 				 	<h3 class="skills">Dégustation de vins et gastronomie</h3>
