deploy: df70d10158d90f2e1ed08927ed76ca6dda03cfa2

--- a/fr.html
+++ b/fr.html
@@ -327,8 +327,8 @@ ul.technologies li {
 	<body>
 				<header>
 				<div class="language-switcher">
-		            <a href="en.html" title="View in English">English</a> |
-		            <a href="fr.html" title="Voir en Français">Français</a>
+		            <a href="en.html" title="View in English">🇬🇧English</a> |
+		            <a href="fr.html" title="Voir en Français">🇫🇷Français</a>
 		        </div>
 		
 				<h1>Nicolas Dréno</h1>
@@ -707,6 +707,25 @@ ul.technologies li {
 			            <span></span>
 			        </div>
 			    </div>
+			</section>
+			<section id="certifications">
+				<h2><i class="fa fa-trophy left"></i> Certifications</h2>
+					<h3>AWS Solution Architect - Associate - Amazon Web Services</h3>
+						<h4>2024-Mar</h4>
+						<p>
+							<a href="https://cp.certmetrics.com/amazon/en/public/verify/credential/EKLHKMM1JERE1NS0" target="_blank" rel="noopener noreferrer">
+								View Credential
+							</a>
+						</p>
+					<h3>Professional Scrum Developer - Scrum.org</h3>
+						<h4>2015-Jan</h4>
+						<p>
+							<a href="https://www.scrum.org/user/153014" target="_blank" rel="noopener noreferrer">
+								View Credential
+							</a>
+						</p>
+					<h3>Certificat de Premiers Secours - Croix-Rouge Française</h3>
+						<h4>2012-Aug</h4>
 			</section>
 			<section id="languages">
 				<h2><i class="fa fa-language left"></i> LANGUAGES</h2>
